day1/node-selector.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      nodeSelector:
        role: nginx
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
