day1/taint-toleration.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-toleration
spec:
  containers:
  - name: nginx
    image: nginx:latest
  tolerations:
  - key: "special"
    operator: "Equal"
    value: "NoSchedule"
    effect: "NoSchedule"
