day1/microservice1-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v1-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloworld-v1
  template:
    metadata:
      labels:
        app: helloworld-v1
    spec:
      containers:
      - name: k8s-demo
        image: arjunachari12/k8s-demo:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-v1
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: helloworld-v1
